# ragmax

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: obsidian_rag.py
src/ragmax/: __init__.py  pipeline.py
src/ragmax/agentic/: __init__.py  agent.py
src/ragmax/chunking/: __init__.py  agentic.py  character.py  context_enriched.py  factory.py  late.py  recursive.py  semantic.py  sentence.py
src/ragmax/core/: __init__.py  config.py  exceptions.py  models.py  protocols.py  tracing.py  utils.py
src/ragmax/embeddings/: __init__.py  anthropic.py  factory.py  google.py  openai.py  sentence_transformers.py
src/ragmax/evaluation/: __init__.py  evaluator.py  metrics.py
src/ragmax/generation/: __init__.py  anthropic.py  factory.py  google.py  openai.py  prompts.py
src/ragmax/guardrails/: __init__.py  factory.py  hallucination.py  injection.py  pii.py  relevance.py
src/ragmax/parsers/: __init__.py  docx.py  html.py  obsidian.py  pdf.py  registry.py  text.py
src/ragmax/query/: __init__.py  decomposer.py  rewriter.py
src/ragmax/reranking/: __init__.py  cohere.py  cross_encoder.py  factory.py  llm_reranker.py
src/ragmax/retrieval/: __init__.py  dense.py  factory.py  hybrid.py  hyde.py  multi_query.py
src/ragmax/stores/: __init__.py  chroma.py  factory.py  qdrant.py
